<resources>
    <string name="app_name">Nav Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lirian</string>
    <string name="nav_header_subtitle">Ilippyk@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_message">Message</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="message_fragment">Message Fragment</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="temp_not_supported">Temp is not supported</string>
    <string name="humidity_not_supported">Humidity is not supported</string>
    <string name="weather">Weather</string>
</resources>
